# pico-wizard

./: .gitignore  AppImageBuilder-arm64.yml  AppImageBuilder-x86_64.yml  AppImageBuilder.yml  CHANGELOG.md  LICENSE  README.rst  genconfig.sh  pico-wizard.png.license  pico-wizard.policy  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
LICENSES/: MIT.txt
PicoWizard/: __init__.py  __main__.py  module.py  moduleloader.py  start.qml
PicoWizard/PicoWizard/: Module.qml  ModuleMediaCenter.qml  NextButton.qml  NextButtonMediaCenter.qml  Toast.qml  ToastManager.qml  qmldir
PicoWizard/assets/: background-mediacenter.svg.license  background.svg.license
PicoWizard/modules/: __init__.py
PicoWizard/modules/cec/: Cec.qml  CopyConfig.sh  cec.py
PicoWizard/modules/finish/: Finish.qml  finish.py
PicoWizard/modules/language/: Language.qml  language.py  languagemodel.py
PicoWizard/modules/locale/: Locale.qml  locale.py  localemodel.py  writelocalegenconfig.sh
PicoWizard/modules/mycroft/: DisableMycroft.sh  EnableMycroft.sh  Mycroft.qml  SetupMycroft.sh  __init__.py  mycroft.py
PicoWizard/utils/: config.py  constants.py  logger.py  pico.default.conf
files/: pico-wizard-script-runner  pico-wizard-session  pico-wizard-session.desktop  pico-wizard-wrapper
pico/: __main__.py  module.py  moduleloader.py  start.qml
pico/PicoWizard/: Module.qml  NextButton.qml  Toast.qml  qmldir
pico/modules/: Module.qml  __init__.py  module.py  moduleloader.py
pico/utils/: Utils.py  config.py  constants.py  logger.py  pico.default.conf
(+47 files in other folders)
