[metadata]
name = pico-wizard-openwebdesigngermany
version = 1.0.0
author = pico-wizard
author_email = openwebdesigngermany@gmail.com
description =  A Post Install COnfiguration for Linux OSes
long_description =  A Post Installation COnfiguration Wizard for Linux OSes 
long_description_content_type = text/markdown
url = https://github.com/pico-wizard/pico-wizard
project_urls =
    Bug Tracker = https://github.com/pico-wizard/pico-wizard/issues
classifiers =

[options]
package_dir =
    = pico
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pico

 
